Atualização de código

--- a/busca_xml.ipynb
+++ b/busca_xml.ipynb
@@ -20,8 +20,13 @@
    "outputs": [],
    "source": [
     "def busca():\n",
+    "    \"\"\" Função que retorna lista com todas as informações do xml.\n",
+    "    A lista retornada deve ser usada juntamente ao iloc, para criar uma nova linha.\n",
+    "    Retorna uma lista de listas.\"\"\"\n",
+    "    # Loop que integra todos os ítens do xml em questão\n",
     "    for nf in doc['nfeProc']['NFe']['infNFe']['det']:\n",
     "        lst = []\n",
+    "        # Buscando por todas as características dos produtos\n",
     "        for i in nf['prod']:\n",
     "            x = nf['prod'][i]\n",
     "            lst.append(x)\n",
@@ -44,9 +49,11 @@
    "outputs": [],
    "source": [
     "lst = []\n",
+    "# Obtendo as listas geradas na saída da função e incluindo em 'lst'\n",
     "for i in dados:\n",
     "    lst.append(i)\n",
-    "        \n",
+    "\n",
+    "# Criando um dataframe com as colunas especificas e os dados sendo as listas\n",
     "df = pd.DataFrame(data=lst, columns=['cProd', 'cEAN', 'xProd', \n",
     "                                     'NCM', 'CEST', 'indEscala',\n",
     "                                     'CFOP', 'uCom', 'qCom', \n",
